fixed header overlap

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -482,7 +482,7 @@ input#search{
   box-shadow: 0 8px 6px -6px $color-grey;
   width: 100%;
   position: fixed;
-  z-index: 10;
+  z-index: 10000;
 }
 
 .navbar-brand{
