--- a/app/assets/stylesheets/modal.scss
+++ b/app/assets/stylesheets/modal.scss
@@ -13,3 +13,7 @@
   border-radius: 25px;
   border: thin #3b5998 solid;
 }
+
+.modal-dialog{
+  margin-top: 70px !important;
+}
